2007-03-06 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile: Set SHOW_INCLUDE_FILES to YES; required to show
	what header file a class is defined in.

2007-03-06 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/event.h
	* src/libopenvrml/openvrml/exposedfield.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/frustum.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/node_impl_util.cpp
	* src/libopenvrml/openvrml/rendering_context.cpp
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2007-03-05 Braden McDaniel  <braden@endoframe.com>

	Join the thread spawned by browser::load_url in browser's
	destructor.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::~browser()): Join the thread that loads the
	root scene.
	(openvrml::browser::load_url(const std::vector<std::string> &,
	const std::vector<std::string> &)): First, join any thread already
	loading a root scene.
	* src/libopenvrml/openvrml/browser.h
	(openvrml::browser): Added member load_root_scene_thread.

2007-03-05 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/configure.ac: Added back mozincludedir
	substitution, which apparently got stomped on at some point.  Its
	loss was disguised by mozilla-xpcom.pc adding flags for this
	directory; but as of firefox 1.5.0.10, mozilla-plugin.pc no longer
	depends on mozilla-xpcom.pc.

2007-02-24 Braden McDaniel  <braden@endoframe.com>

	Fixed problem reading JPEG images when input is suspended.
